--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,3 +8,10 @@ body {
     background-repeat: no-repeat;
     background-attachment: fixed;
   }
+
+.mob-nav{
+  background-image: url('/img/background.svg');
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+}
